Funcionalidade implementada com ordens sendo recuperada do serviço.

--- a/src/main/webapp/WEB-INF/messages_pt.properties
+++ b/src/main/webapp/WEB-INF/messages_pt.properties
@@ -15,6 +15,7 @@ navegacao.categoria.outros = Outros
 
 menu.lista_produtos = Produtos
 menu.cadastro_produtos = Cadastro
+menu.lista_pedidos = Pedidos
 menu.carrinho = Seu carrinho ({0})
 menu.usuarios = Usuários
 menu.en = EN
