Funcionalidade implementada com alteração de permissões sendo realizadas com sucesso.

--- a/src/main/webapp/WEB-INF/messages_pt.properties
+++ b/src/main/webapp/WEB-INF/messages_pt.properties
@@ -39,3 +39,4 @@ cadastro.usuarios.cadastrar = Cadastrar
 
 lista.usuarios = Lista de usuários
 lista.usuarios.novo = Novo usuário 
+lista.permissoes = Cadastro de permissões para {0}
