Correções finais, ajustando alguns properties.

--- a/src/main/webapp/WEB-INF/messages_en_US.properties
+++ b/src/main/webapp/WEB-INF/messages_en_US.properties
@@ -38,3 +38,10 @@ cadastro.usuarios.cadastrar = Register
 
 lista.usuarios = Users list
 lista.usuarios.novo = New user
+lista.permissoes = Permissions registration for {0}
+
+pedidos.id = ID
+pedidos.valor = Value
+pedidos.data.pedido = Order date
+pedidos.titulos = Titles
+pedidos.lista = Current Orders List
