--- a/src/main/webapp/WEB-INF/messages_pt.properties
+++ b/src/main/webapp/WEB-INF/messages_pt.properties
@@ -40,3 +40,9 @@ cadastro.usuarios.cadastrar = Cadastrar
 lista.usuarios = Lista de usuários
 lista.usuarios.novo = Novo usuário 
 lista.permissoes = Cadastro de permissões para {0}
+
+pedidos.id = ID
+pedidos.valor = Valor
+pedidos.data.pedido = Data Pedido
+pedidos.titulos = Títulos
+pedidos.lista = Lista de Pedidos Atuais
